--- a/Kikat Snax/Venetian.html
+++ b/Kikat Snax/Venetian.html
@@ -2225,15 +2225,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
 }
-/*#/#*//*#i46.image.css:image/base/css*/
-#i46 { opacity: 1; }
-/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 185px; height: 49px;
-        -ms-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
-        transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
-}
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
@@ -2279,6 +2270,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
 }
+/*#/#*//*#i46.image.css:image/base/css*/
+#i46 { opacity: 1; }
+/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 185px; height: 49px;
+        -ms-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
+        transform: translate(0, 0) translate(69px, 331px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2296,13 +2296,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/BPQpc8v.gif"/>
+<img id="i74" src="https://i.imgur.com/sFl8hS5.gif"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/RGXP67b.png"/>
-<!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/zp7kenA.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">¡Para disfrutar en cualquier momento!</div>
+<div id="i68">¡Para disfrutar en cualquier momento!.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¿Se te antoja un Snax?</div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
@@ -2313,6 +2311,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i70">
     
 </div>
+<!--#/#--><!--#i46.image.html:image/html-->
+<img id="i46" src="https://i.imgur.com/zp7kenA.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2382,10 +2382,6 @@ bmShow('i74');
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
-/*#/#*//*#i46.image.js:image/base/js*/
-
-/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
-bmShow('i46');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
@@ -2398,7 +2394,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2413,7 +2409,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.nestle.com.mx/brands'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2428,7 +2424,24 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i46.image.js:image/base/js*/
+
+/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
+bmShow('i46');
+/*#/#*//*#i46.i89.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i46');
+
+el.addEventListener('click', function(e){
+    /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2473,13 +2486,8 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i46.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: ¡Para disfrutar en cualquier momento!; customName: false;
+name: ¡Para disfrutar en cualquier momento!.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
@@ -2499,4 +2507,9 @@ name: Container 1;
 data: /*!*/{}/*!*/;
 /*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i46.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
