--- a/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
@@ -13,7 +13,7 @@
         <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
 
         <script>
-            var linkRedirect = 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la';
+            var linkRedirect = 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6';
             var config = [
                 {
                     start: 5,
@@ -26,7 +26,7 @@
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
                         imageUrl: 'https://i.imgur.com/MksCwDw.jpg',
                         title: '',
-                        href: 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la',
+                        href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
                         description: '¿Se te antoja un Snax?'
                     }
                 },{
@@ -40,7 +40,7 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/AOgitKd.jpg',
                         title: '',
-                        href: 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la',
+                        href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
                         description: '¡Para disfrutar en cualquier momento!'
                     }
                 },
@@ -55,7 +55,7 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/RnjWUnh.jpg',
                         title: '',
-                        href: 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la',
+                        href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
                         description: 'Imanol el girasol protege, calma y reepiteliza la piel atópica.'
                     }
                 },
@@ -70,7 +70,7 @@
                     detail: {
                         imageUrl: './image/zapatos-de-tacon-con-lateral-abierto-negro-mujer-talla-34-a-48-wz517_1_fr1.jpg',
                         title: 'asdasdas.com',
-                        href: 'https://www.instagram.com/explore/locations/167269297212048/mexico/mexico-city-mexico/nestle-mexico/?hl=es-la',
+                        href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
                         description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
                     }
                 }*/
