--- a/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
@@ -24,7 +24,7 @@
                     ],
                     img_screen: 'https://i.imgur.com/yUnnlBu.png',
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
-                        imageUrl: 'https://i.imgur.com/MksCwDw.jpg',
+                        imageUrl: 'https://i.imgur.com/pagyspw.gif',
                         title: '',
                         href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
                         description: '¿Se te antoja un Snax?'
@@ -38,10 +38,10 @@
                     ],
                     img_screen: 'https://i.imgur.com/nxnIEVh.png',
                     detail: {
-                        imageUrl: 'https://i.imgur.com/AOgitKd.jpg',
+                        imageUrl: 'https://i.imgur.com/pagyspw.gif',
                         title: '',
                         href: 'https://goo.gl/maps/Rs1P1TqhiDDHT6Jc6',
-                        description: '¡Para disfrutar en cualquier momento!'
+                        description: '¡No lo pienses más!'
                     }
                 },
                 /*{
@@ -146,11 +146,11 @@
             .modal .modal-content .modal-header .close {
               color: #aaa;
               float: right;
-              font-size: 28px;
+              font-size: 18px;
               font-weight: bold;
               font-family: Trebuchet MS;
               margin-top: 5px;
-              margin-right: 8px;
+              margin-right: 5px;
             }
 
             .modal .modal-content .modal-header .close:hover,
@@ -279,7 +279,7 @@
                             <div class="title"></div>
                             <div class="description"></div>
                             <div class="link">
-                                <a href="javascript:;">¡Encuéntralo ya!</a>
+                                <a href="javascript:;">¡Ven ahora!</a>
                             </div>
                         </div>
                     </div>
