--- a/Kikat Snax/Venetian.html
+++ b/Kikat Snax/Venetian.html
@@ -2300,7 +2300,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/RGXP67b.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">¡Para disfrutar en cualquier momento!.</div>
+<div id="i68">¡Para disfrutar en cualquier momento!</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¿Se te antoja un Snax?</div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
