--- a/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Kikat Snax/circles and modals basic (with screen block, and hosting video) (1).html
@@ -22,7 +22,7 @@
                         'left: 5px;',
                         'top: 50px;'
                     ],
-                    img_screen: 'https://i.imgur.com/U8TX95k.png',
+                    img_screen: 'https://i.imgur.com/tp6hnaX.png',
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
                         imageUrl: 'https://i.imgur.com/pagyspw.gif',
                         title: '',
@@ -36,7 +36,7 @@
                         'left: 5px;',
                         'top: 150px;'
                     ],
-                    img_screen: 'https://i.imgur.com/iJGj9Z7.png',
+                    img_screen: 'https://i.imgur.com/nWAyEiT.png',
                     detail: {
                         imageUrl: 'https://i.imgur.com/pagyspw.gif',
                         title: '',
