--- a/TUCSON/Cube.html
+++ b/TUCSON/Cube.html
@@ -875,7 +875,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Es curioso, cuanto más duro trabajas, más suerte tienes.</div>
+<div id="i14">Descubre el Nuevo Hyundai Tucson Híbrido 48V con etiqueta ECO.</div>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/zkWntmP.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
@@ -897,7 +897,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/J72nuxI.jpg"/>
 <!--#/#--><!--#i5.i262.text.html:text/html-->
-<div id="i262">Y como la suerte llama a la suerte, llévate un Hyundai Tucson Híbrido 48V, desde 190€ al mes.</div>
+<div id="i262">La versión híbrida del Tucson con la última tecnología, un diseño único y etiqueta ECO.</div>
 <!--#/#--><!--#i5.i264.image.html:image/html-->
 <img id="i264" src="https://i.imgur.com/zkWntmP.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
