--- a/Falabella/FadeBig.html
+++ b/Falabella/FadeBig.html
@@ -57,18 +57,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/a4cXFTh.png");
+            background: url("https://i.imgur.com/dE91wmt.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/INtVAtN.png");
+            background: url("https://i.imgur.com/i3KdVSr.png");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/SYIrUwp.png");
+            background: url("https://i.imgur.com/WknxphV.png");
             background-size: cover;
             
         }
