--- a/Falabella/Venetian320x480.html
+++ b/Falabella/Venetian320x480.html
@@ -2145,7 +2145,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 380px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 319px; height: 380px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -2155,10 +2155,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 71px; height: 36px;
-        -ms-transform: translate(0, 0) translate(244px, 439px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 439px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 439px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 439px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(243px, 438px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(243px, 438px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(243px, 438px) rotate(0deg);
+        transform: translate(0, 0) translate(243px, 438px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2219,13 +2219,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 297px; height: 61px;
-        -ms-transform: translate(0, 0) translate(11px, 382px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 382px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 382px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 382px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 274px; height: 61px;
+        -ms-transform: translate(0, 0) translate(23px, 386px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(23px, 386px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(23px, 386px) rotate(0deg);
+        transform: translate(0, 0) translate(23px, 386px) rotate(0deg);
 }
 /*#/#*//*#i47.button.css:button/base/css*/
 #i47 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(31,171,19,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(31,171,19,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2287,11 +2287,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/1i9ipFl.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/RFhrdx5.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/4I28MhE.png"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
 <dataimg id="i37" src="https://i.imgur.com/yTEKklX.png"></dataimg>
 <!--#/#--><!--#i2.i46.slice-image.html:slice-image/html.1-->
-<dataimg id="i46" src="https://i.imgur.com/M8poVGS.png"></dataimg>
+<dataimg id="i46" src="https://i.imgur.com/3c3nnZf.png"></dataimg>
 <!--#/#--><!--#i2.i49.slice-image.html:slice-image/html.1-->
 <dataimg id="i49" src="https://i.imgur.com/5RPxV7c.png"></dataimg>
 <!--#/#-->
@@ -2459,12 +2459,12 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: 1i9ipFl.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: RFhrdx5.png; fileId: ; sourceTypeId: externalUrl;
+name: 4I28MhE.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
 name: yTEKklX.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i46.slice-image.meta:slice-image/meta.1*/
-name: M8poVGS.png; fileId: ; sourceTypeId: externalUrl;
+name: 3c3nnZf.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i49.slice-image.meta:slice-image/meta.1*/
 name: 5RPxV7c.png; fileId: ; sourceTypeId: externalUrl;
