--- a/H&M video/VideoInteractivoURLdirectoConEventos.html
+++ b/H&M video/VideoInteractivoURLdirectoConEventos.html
@@ -20,7 +20,7 @@
                         'left: 90px;',
                         'top: 170px;'
                     ],
-                    img_screen: 'https://i.imgur.com/hgcsJx7.png',
+                    img_screen: 'https://i.imgur.com/pni9mby.png',
                     href: 'https://www2.hm.com/en_us/productpage.0733864002.html',
                 },{
                     start: 3,
@@ -28,7 +28,7 @@
                         'left: 160px;',
                         'top: 170px;'
                     ],
-                    img_screen: 'https://i.imgur.com/TtDfGcd.png',
+                    img_screen: 'https://i.imgur.com/6zF4RCr.png',
                     href: 'https://www2.hm.com/en_us/productpage.0733852001.html'
                 },
                  {
@@ -37,7 +37,7 @@
                         'left: 120px;',
                         'top: 170px;'
                     ],
-                    img_screen: 'https://i.imgur.com/hgcsJx7.png',
+                    img_screen: 'https://i.imgur.com/pni9mby.png',
                     href: 'https://www2.hm.com/en_us/productpage.0747246002.html'                    
                 },{
                     start: 20,
@@ -45,7 +45,7 @@
                         'left: 120px;',
                         'top: 170px;'
                     ],
-                    img_screen: 'https://i.imgur.com/TtDfGcd.png',
+                    img_screen: 'https://i.imgur.com/6zF4RCr.png',
                     href: 'https://www2.hm.com/en_us/productpage.0188183022.html'                    
                 }
             ];
