--- a/Cristal/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Cristal/circles and modals basic (with screen block, and hosting video) (1).html
@@ -285,7 +285,7 @@
                             <div class="title"></div>
                             <div class="description"></div>
                             <div class="link">
-                                <a href="javascript:;">¡Ven ahora!</a>
+                                <a href="javascript:;">¡COMENZAR!</a>
                             </div>
                         </div>
                     </div>
