--- a/NELSON VARGAS/cubo.html
+++ b/NELSON VARGAS/cubo.html
@@ -515,13 +515,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i390.image.css:image/base/css*/
 #i390 { opacity: 1; }
 /*#/#*//*#i4.i410.text.css:text/base/css*/
-#i410 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-Cond; font-size: 20px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i410 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-Cond; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i410.i411.positioning.css:positioning/base/css.1*/
-#i410 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 20px;
-        -ms-transform: translate(-50%, -50%) translate(2px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(2px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(2px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(2px, 79px) rotate(0deg);
+#i410 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 40px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
 }
 /*#/#*//*#i4.i396.image.css:image/base/css*/
 #i396 { opacity: 1; }
@@ -677,18 +677,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i390.i391.positioning.css:positioning/base/css.2*/
-#i390 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 164px; height: 38px;
-        -ms-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
+#i390 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 154px; height: 36px;
+        -ms-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
 }
 /*#/#*//*#i396.i397.positioning.css:positioning/base/css.2*/
 #i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 184px; height: 49px;
-        -ms-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
 }
 /*#/#*//*#i5.i336.image.css:image/base/css*/
 #i336 { opacity: 1; }
@@ -703,19 +703,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i278 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-Cond; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i278.i279.positioning.css:positioning/base/css.1*/
 #i278 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 53px;
-        -ms-transform: translate(-50%, -50%) translate(2px, 96px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(2px, 96px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(2px, 96px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(2px, 96px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(4px, 96px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 96px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 96px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 96px) rotate(0deg);
 }
-/*#/#*//*#i5.i414.image.css:image/base/css*/
-#i414 { opacity: 1; }
-/*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
-#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 164px; height: 38px;
-        -ms-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(153px, 215px) rotate(0deg);
+/*#/#*//*#i5.i422.image.css:image/base/css*/
+#i422 { opacity: 1; }
+/*#/#*//*#i422.i423.positioning.css:positioning/base/css.2*/
+#i422 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 154px; height: 36px;
+        -ms-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(161px, 217px) rotate(0deg);
+}
+/*#/#*//*#i5.i420.image.css:image/base/css*/
+#i420 { opacity: 1; }
+/*#/#*//*#i420.i421.positioning.css:positioning/base/css.2*/
+#i420 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 184px; height: 49px;
+        -ms-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
+        transform: translate(0, 0) translate(58px, 143px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -726,15 +735,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i416.image.css:image/base/css*/
-#i416 { opacity: 1; }
-/*#/#*//*#i416.i417.positioning.css:positioning/base/css.2*/
-#i416 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 184px; height: 49px;
-        -ms-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(58px, 145px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -773,7 +773,8 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i390.image.html:image/html-->
 <img id="i390" src="https://i.imgur.com/XE9M9DK.png"/>
 <!--#/#--><!--#i4.i410.text.html:text/html-->
-<div id="i410">22% de descuento en pago anual.</div>
+<div id="i410">Encuentra tu estilo con el programa más completo
+de natación. Inscríbete a un precio especial.</div>
 <!--#/#--><!--#i4.i396.image.html:image/html-->
 <img id="i396" src="https://i.imgur.com/Ahw7UNe.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -787,13 +788,13 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i336.image.html:image/html-->
 <img id="i336" src="https://i.imgur.com/TkTPF1n.jpg"/>
 <!--#/#--><!--#i5.i278.text.html:text/html-->
-<div id="i278">VENTA EXTREMA, desde el 13 de Mayo al 5 de Junio.</div>
-<!--#/#--><!--#i5.i414.image.html:image/html-->
-<img id="i414" src="https://i.imgur.com/XE9M9DK.png"/>
+<div id="i278">La Gran Venta Xtrema del 30 de mayo al 5 de junio.</div>
+<!--#/#--><!--#i5.i422.image.html:image/html-->
+<img id="i422" src="https://i.imgur.com/XE9M9DK.png"/>
+<!--#/#--><!--#i5.i420.image.html:image/html-->
+<img id="i420" src="https://i.imgur.com/Ahw7UNe.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
-<!--#/#--><!--#i5.i416.image.html:image/html-->
-<img id="i416" src="https://i.imgur.com/Ahw7UNe.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -864,10 +865,14 @@ if ('click' === 'click') {
  
 /*#/#*//*#i5.i336.image.js:image/base/js*/
 
-/*#/#*//*#i5.i414.image.js:image/base/js*/
+/*#/#*//*#i5.i422.image.js:image/base/js*/
 
-/*#/#*//*#i414.i415.positioning.js:positioning/base/js.2*/
-bmShow('i414');
+/*#/#*//*#i422.i423.positioning.js:positioning/base/js.2*/
+bmShow('i422');
+/*#/#*//*#i5.i420.image.js:image/base/js*/
+
+/*#/#*//*#i420.i421.positioning.js:positioning/base/js.2*/
+bmShow('i420');
 /*#/#*//*#i95.i384.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -881,10 +886,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i5.i416.image.js:image/base/js*/
-
-/*#/#*//*#i416.i417.positioning.js:positioning/base/js.2*/
-bmShow('i416');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -932,8 +933,8 @@ name: Texto copy; customName: 1;
 /*#/#*//*#i410.i411.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i396.image.meta:image/meta*/
-name: Ahw7UNe.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i396.i397.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -955,20 +956,20 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i278.i279.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i414.image.meta:image/meta*/
+/*#/#*//*#i5.i422.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i414.i415.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i422.i423.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i420.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i420.i421.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i416.image.meta:image/meta*/
-name: Ahw7UNe.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i416.i417.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i418.font.meta:font/meta*/
