--- a/NELSON VARGAS/FadeBig.html
+++ b/NELSON VARGAS/FadeBig.html
@@ -62,12 +62,12 @@
        }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/0WSGlLK.jpg");
+            background: url("https://i.imgur.com/0MeuFm8.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/wqqlL3L.jpg");
+            background: url("https://i.imgur.com/hheaWz3.jpg");
             background-size: cover;
             
         }
@@ -201,13 +201,13 @@
         .item-1 {
             z-index: 2;
             opacity: 1;
-            animation: fade 8s infinite;
-            -webkit-animation: fade 8s infinite;
+            animation: fade 22s infinite;
+            -webkit-animation: fade 16s infinite;
         }
 
         .item-2 {
-            animation: fade2 8s infinite;
-            -webkit-animation: fade2 8s infinite;
+            animation: fade2 22s infinite;
+            -webkit-animation: fade2 16s infinite;
         }
 
        
